--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,125 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+*
+{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: 'Comfortaa', cursive;
+}
+body{
+  scroll-behavior: smooth;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+@keyframes animateDown{
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  0%,20%,50%,80%,100% {
+    transform:translateY(0);
+  }
+
+  40%
+  {
+    transform:translateY(5px);
+  }
+  60%
+  {
+    transform: translateY(3px);
   }
 }
+a{
+  text-decoration: none;
+}
+li{
+  list-style: none;
+}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+
+#form{
+  height: 100%;
+  /*background-color: RGBA(10, 27, 70,0.5);*/
+  background-color: rgba(255,255,255,0.5);
+  overflow: hidden;
+  position: relative;
+  border-radius: 10px;
+  padding: 0 2vh 2vh;
+}
+form{
+  margin: 0 auto;
+  width: 500px;
+  padding-top: 40px;
   color: white;
+  position: relative;
+
+
+}
+label, input, textarea{
+  display: block;
+}
+input, textarea{
+  width: 500px;
+  border-radius: 20px;
+  outline: none;
+  padding: 10px;
+  font-family: 'Sniglet', cursive;
+  font-size: 1em;
+  color: white;
+  background-color: rgba(126,126,126,0.5);
+  transition: border 0.5s;
+  -webkit-transition: border 0.5s;
+  -moz-transition: border 0.5s;
+  -o-transition: border 0.5s;
+  border: solid 3px #262f47;
+  -webkit-box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  box-sizing:border-box;
+
+}
+input:focus, textarea:focus{
+  border: solid 3px white;
+  transition-duration: 1s;
 }
 
-.App-link {
-  color: #61dafb;
+textarea{
+  height: 100px;
+  resize: none;
+  overflow: auto;
 }
+input[type="submit"]{
+  color: white;
+  margin-top: 30px;
+  border: transparent;
+  background-color: red;
+  padding: 18px 38px;
+  box-shadow: -2px -9px 17px 1px rgba(255,255,255,0.63);
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  border-radius: 8px;
+  cursor: pointer;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+}
+input[type="submit"]:hover{
+  background-color:#e40000;
+  transition-duration: 1s;
+
+}
+label{
+  font-size: 1.5em;
+  margin-top: 20px;
+  padding-left: 20px;
+}
+.formgroup, .formgroup-active, .formgroup-error{
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  background-size: 10.5%;
+  transition: background-image 0.7s;
+  -webkit-transition: background-image 0.7s;
+  -moz-transition: background-image 0.7s;
+  -o-transition: background-image 0.7s;
+  width: 566px;
+  padding-top: 2px;
 }
